--- a/ui/meson.build
+++ b/ui/meson.build
@@ -25,6 +25,7 @@ xemu_ss.add(files(
   'xemu-monitor.c',
   'xemu-net.c',
   'xemu-settings.cc',
+  'xemu-controllers.cc',
 
   'xemu.c',
   'xemu-data.c',
